# tdd-by-example-with-python

./: .gitignore  .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml
.github/workflows/: workflow.yml
.github/worksflows/: workflow.yml
src/fibonacci/iter01/: fibonacci.py
src/fibonacci/iter03/: fibonacci.py
src/fibonacci/iter04/: fibonacci.py
src/fibonacci/iter05/: fibonacci.py
src/fibonacci/iter06/: fibonacci.py
src/fibonacci/iter07/: fibonacci.py
src/fibonacci/iter10/: fibonacci.py
src/fibonacci/iter11/: fibonacci.py
src/fibonacci/iter12/: fibonacci.py
src/fizzbuzz/: README.md  fizzbuzz.py
src/stringcalculator/: README.md  __init__.py  string_calculator.py
tests/fibonacci/iter01/: test_fibonacci.py
tests/fibonacci/iter02/: test_fibonacci.py
tests/fibonacci/iter03/: test_fibonacci.py
tests/fibonacci/iter04/: test_fibonacci.py
tests/fibonacci/iter05/: test_fibonacci.py
tests/fibonacci/iter06/: test_fibonacci.py
tests/fibonacci/iter07/: test_fibonacci.py
tests/fibonacci/iter08/: test_fibonacci.py
tests/fibonacci/iter09/: test_fibonacci.py
tests/fibonacci/iter10/: test_fibonacci.py
tests/fibonacci/iter11/: test_fibonacci.py
tests/fibonacci/iter12/: test_fibonacci.py
tests/fizzbuzz/: test_fizzbuzz.py
tests/stringcalculator/: test_string_calculator.py
