[tool.poetry]
name = "tdd-by-example"
version = "0.1.0"
description = ""
authors = ["safecorners <safecorners.mobile@gmail.com>"]
readme = "README.md"
packages = [
    {include = "money", from = "src"},
    {include = "fibonacci", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
pytest-xdist = "^3.5.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.8.0"
black = "^24.2.0"
isort = "^5.13.2"
pre-commit = "^3.6.2"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["src"]

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__"]
count = true
extend-ignore = E203,E701

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
